# rsomics-pdb-contacts

./: Cargo.toml  README.md
benches/: bench.rs
src/: cell_list.rs  cli.rs  contacts.rs  lib.rs  main.rs  output.rs  pdb.rs
tests/: compat.rs  contacts_oracle.py
tests/golden/: 1crn.atom_4.0.tsv  1crn.atom_ca_boundary.tsv  1crn.residue_8.0.tsv  1crn.residue_ca_8.0_sep2.tsv  altloc.atom_ca_3.0.tsv
